--- a/help.html
+++ b/help.html
@@ -48,12 +48,12 @@
 		<div class="container mb-2">
 			<div class="row">
 				<div class="col-sm-12 text-mckup">
-					<div class="mt-8">
+					<div class="mt-8 mb-2">
 						<h1 class="mt-5" style="font-weight: 900; text-align: center; color: #7004d4;">BUTUH <span style="color: white;">BANTUAN..?</span></h1>
 					</div>
 
 					<!-- Quick Help -->
-					<div class="mt-5 container">
+					<div class="mt-6 container">
 						<div class="row container mt-4 mb-6" style="align-self: center;">
 							<div class="col-sm-4 container mt-4">
 								<a href="#" style="text-decoration: none;">
@@ -99,7 +99,7 @@
 			<div class="container-lg mb-5">
 				<div class="row">
 					<div class="col-lg-10">
-						<h1 class="page-title">Tentang <span class="head-color">Lost&Found</span></h1>
+						<h1 class="page-title">Bantuan <span class="head-color">Lost&Found</span></h1>
 						<div class="accordion" id="accordionExample">
 							<div class="card">
 								<div class="card-header" id="headingOne">
@@ -107,21 +107,16 @@
 										<a class="btn btn-link" data-toggle="collapse" data-target="#collapseOne"
 											aria-expanded="true" aria-controls="collapseOne">
 											<i class="fa fa-chevron-circle-down"></i>
-											What is Bootstrap Framework?
+											Sulitkah menggunakan Lost&Found?
 										</a>
 									</h2>
 								</div>
 								<div id="collapseOne" class="collapse show" aria-labelledby="headingOne"
 									data-parent="#accordionExample">
-									<div class="card-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-										Nam eu sem
-										tempor, varius quam at, luctus dui. Mauris magna metus, dapibus nec turpis
-										vel, semper
-										malesuada ante. Vestibulum id metus ac nisl bibendum scelerisque non non
-										purus.
-										Suspendisse
-										varius nibh non aliquet sagittis. In tincidunt orci sit amet elementum
-										vestibulum.
+									<div class="card-body">
+										Lost&Found merupakan sebuah platform yang user friendly sehingga akan sangat mudah digunakan
+										oleh pengguna awam sekalipun. User dapat mengakses hanya dari layar laptop atau komputer bahkan
+										hanya dari layar ponsel saja.
 									</div>
 								</div>
 							</div>
@@ -132,20 +127,22 @@
 											data-target="#collapseTwo" aria-expanded="false"
 											aria-controls="collapseTwo">
 											<i class="fa fa-chevron-circle-down"></i>
-											How to Create Responsive Website with Bootstrap?
+											Bagaimana cara melaporkan barang yang hilang?
 										</a>
 									</h2>
 								</div>
 								<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
 									data-parent="#accordionExample">
-									<div class="card-body">Anim pariatur cliche reprehenderit, enim eiusmod high
-										life accusamus
-										terry richardson ad squid. 3 wolf moon officia aute, non cupidatat
-										skateboard dolor
-										brunch.
-										Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt
-										aliqua put a
-										bird on it squid single-origin coffee nulla assumenda shoreditch et.
+									<div class="card-body">
+										Untuk melaporakan barang yang hilang, Anda dapat
+										<a href="login.html" style="text-decoration: none;"> login </a>
+										atau
+										<a href="register.html" style="text-decoration: none;"> daftar </a>
+										terlebih dahulu, kemudian lengkapi data diri Anda dan lakukan verifikasi. Setelah itu beralih ke menu
+										<a href="temukan-barang.html" style="text-decoration: none;"> temukan barang </a>
+										kemudian masukkan ciri-ciri dan informasi mengenai barang Anda yang hilang. Sebelum submit Anda juga perlu
+										menverifikasi bahwa barang tersebut adalah benar barang Anda.
+										
 									</div>
 								</div>
 							</div>
@@ -156,21 +153,20 @@
 											data-target="#collapseThree" aria-expanded="false"
 											aria-controls="collapseThree">
 											<i class="fa fa-chevron-circle-down"></i>
-											Does Bootstrap Framework Provide Cross-browser Support?
+											Jika Anda menemukan barang?
 										</a>
 									</h2>
 								</div>
 								<div id="collapseThree" class="collapse" aria-labelledby="headingThree"
 									data-parent="#accordionExample">
-									<div class="card-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-										Nam eu sem
-										tempor, varius quam at, luctus dui. Mauris magna metus, dapibus nec turpis
-										vel, semper
-										malesuada ante. Vestibulum id metus ac nisl bibendum scelerisque non non
-										purus.
-										Suspendisse
-										varius nibh non aliquet sagittis. In tincidunt orci sit amet elementum
-										vestibulum.
+									<div class="card-body">
+										Jika Anda menemukan barang, Anda dapat melaporkan barang tersebut pada halaman
+										<a href="temukan-barang.html" style="text-decoration: none;"> temukan barang </a>
+										kemudian cocokkan apakah barang yang Anda temukan adalah benar. Setelah itu klik tombol "Saya menemukan"
+										dan tuliskan informasi mengenai barang yang Anda temukan dan tunggu sampai pemilik mengonfirmasi bahwa barang
+										tersebut adalah benar barangnya yang hilang. Setelah itu Anda dapat melakukan perbincangan secara pribadi mengenai tempat
+										dan cara Anda mengembalikan barang tersebut kepada pemiliknya. Kami juga menyediakan fitur antar jemput dengan ongkos
+										kirim yang terjangkau.
 									</div>
 								</div>
 							</div>
@@ -181,20 +177,17 @@
 											data-target="#collapseFour" aria-expanded="false"
 											aria-controls="collapseFour">
 											<i class="fa fa-chevron-circle-down"></i>
-											Can I Use Bootstrap for Mobile App Development?
+											Apakah Lost&Found aman?
 										</a>
 									</h2>
 								</div>
 								<div id="collapseFour" class="collapse" aria-labelledby="headingFour"
 									data-parent="#accordionExample">
-									<div class="card-body">Anim pariatur cliche reprehenderit, enim eiusmod high
-										life accusamus
-										terry richardson ad squid. 3 wolf moon officia aute, non cupidatat
-										skateboard dolor
-										brunch.
-										Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt
-										aliqua put a
-										bird on it squid single-origin coffee nulla assumenda shoreditch et.
+									<div class="card-body">
+										Kami bekerja sama dengan beberapa pihak, seperti pemerintah setempat, Indomaret, kepolisian dan pihak yang berwenang lainnya.
+										Kami juga melakukan tahap verifikasi yang dilakukan oleh teknologi yang canggih sehingga setiap user yang melakukan
+										registrasi dan daftar sebagai user akan dipastikan benar-benar warga Indonesia. Kami juga melakukan pendataan berdasarkan
+										NIK dari user sehingga mencegah adanya akun penipuan pada Lost&Found kami.
 									</div>
 								</div>
 							</div>
