--- a/help.html
+++ b/help.html
@@ -33,6 +33,7 @@
 					<li><a href="home.html" class="active">HOME</a></li>
 					<li><a href="#" class="active">TEMUKAN BARANG</a></li>
 					<li><a href="help.html" class="active">BANTUAN</a></li>
+					<li><a href="tentang.html" class="active">TENTANG KAMI</a></li>
 					<li><a href="hubungi.html" class="active">HUBUNGI KAMI</a></li>
 					<li><a href="login.html" class="masuk">MASUK</a></li>
 					<li><a href="register.html" class="register">DAFTAR</a></li>
@@ -45,33 +46,33 @@
 
 	<!-- Main Conten -->
 	<div class="color-carousel">
-		<div class="container mb-2">
+		<div class="section-mt">
 			<div class="row">
 				<div class="col-sm-12 text-mckup">
-					<div class="mt-8 mb-2">
+					<div class="mt-5 mb-2">
 						<h1 class="mt-5" style="font-weight: 900; text-align: center; color: #7004d4;">BUTUH <span style="color: white;">BANTUAN..?</span></h1>
 					</div>
 
 					<!-- Quick Help -->
 					<div class="mt-6 container">
-						<div class="row container mt-4 mb-6" style="align-self: center;">
+						<div class="row container mt-4 mb-4" style="align-self: center;">
 							<div class="col-sm-4 container mt-4">
 								<a href="#" style="text-decoration: none;">
-									<img src="assets/img/about/faq.png" alt="" width="300px" class="mx-auto d-block">
+									<img src="assets/img/about/faq.png" alt="" width="250px" class="mx-auto d-block">
 									<h2 class="mt-1" style="font-weight: 900; text-align: center; color: #7004d4;">FAQ
 									</h2>
 								</a>
 							</div>
 							<div class="col-sm-4 container mt-4">
 								<a href="#" style="text-decoration: none;">
-									<img src="assets/img/about/bantuan.png" alt="" width="300px" class="mx-auto d-block">
+									<img src="assets/img/about/bantuan.png" alt="" width="250px" class="mx-auto d-block">
 									<h2 class="mt-1" style="font-weight: 900; text-align: center; color: #7004d4;">HELP
 									</h2>
 								</a>
 							</div>
 							<div class="col-sm-4 container mt-4">
 								<a href="#" style="text-decoration: none;">
-									<img src="assets/img/about/ask-2.png" alt="" width="300px" class="mx-auto d-block">
+									<img src="assets/img/about/ask-2.png" alt="" width="250px" class="mx-auto d-block">
 									<h2 class="mt-1" style="font-weight: 900; text-align: center; color: #7004d4;">ASK
 									</h2>
 								</a>
