--- a/hubungi.html
+++ b/hubungi.html
@@ -44,6 +44,7 @@
           <li><a href="home.html" class="active">HOME</a></li>
           <li><a href="#" class="active">TEMUKAN BARANG</a></li>
           <li><a href="help.html" class="active">BANTUAN</a></li>
+          <li><a href="tentang.html" class="active">TENTANG KAMI</a></li>
           <li><a href="hubungi.html" class="active">HUBUNGI KAMI</a></li>
           <li><a href="login.html" class="masuk">MASUK</a></li>
           <li><a href="register.html" class="register">DAFTAR</a></li>
